--- a/wp-content/themes/evie/assets/less/layouts/_footer.less
+++ b/wp-content/themes/evie/assets/less/layouts/_footer.less
@@ -28,8 +28,9 @@ footer{
 			}
 			li{
 				list-style:none;
-				margin-right:4%!important;
+				margin-right:5.5%!important;
 				text-align: center;
+				white-space:nowrap;
 				a{
 					color:#000;
 					font-weight: 400;
@@ -54,6 +55,49 @@ footer{
 		a{
 			color:#000;
 		}
+	}
+}
+
+.social-link-container a{
+	background:url(../img/sprites/sprites_social_media.png) no-repeat;
+	width:21px;
+	height:21px;
+	margin-right:10px;
+	display:inline-block;
+	&:last-child{
+		margin-right:0;
+	}
+	
+	&.icon_facebook{
+		background-position:0 0;
+	}
+	
+	&.icon_instagram{
+		background-position:-34px 0;
+	}
+	
+	&.icon_weibo{
+		background-position:-68px 0;
+	}
+	
+	&.icon_wechat{
+		background-position:-102px 0;
+	}
+	
+	&.icon_pinterest{
+		background-position:-136px 0;
+	}
+	
+	&.icon_twitter{
+		background-position:-170px 0;
+	}
+	
+	&.icon_youtube{
+		background-position:-204px 0;
+	}
+	
+	&.icon_linkin{
+		background-position:-239px 0;
 	}
 }
 
@@ -97,7 +141,7 @@ footer{
 					width:auto;
 					margin-right:40px;
 					&:last-child{
-						margin-right:0;
+						margin-right:0!important;
 					}
 				}
 				.sub-menu{
