--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -175,6 +175,12 @@
 			}
 			.navbar-nav > li{
 				text-transform:uppercase;
+				& > a{
+					color:#000;
+				}
+				&.active > a{
+					font-weight:500!important;
+				}
 				&:hover{
 					& > a{
 						font-weight:bold;
