--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -22,7 +22,7 @@ body{
 	-moz-box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
 	box-shadow: 0px 3px 5px 0px rgba(245,232,229,0.5);
 	.woocommerce-breadcrumb{
-		font-weight:600;
+		font-weight:300;
 		font-family: "Novecento";
 		color:#000;
 		text-transform:uppercase;
@@ -31,7 +31,7 @@ body{
 		letter-spacing: 1px;
 		a{
 			color:#000;
-			font-weight:500;
+			font-weight:300;
 			text-decoration: none;
 		}
 		.fa{
@@ -145,6 +145,12 @@ body{
 		letter-spacing: 2px;
 		line-height: 100%;
 		padding: 0 20px;
+	}
+	#connect_close{
+		position:absolute;
+		top:15px;
+		right:15px;
+		color:#000;
 	}
 }
 
@@ -267,6 +273,7 @@ body{
 		ul{
 			li{
 				float:right;
+				position:relative;
 				a{
 					display:inline-block;
 					margin-right:0;
@@ -277,6 +284,13 @@ body{
 					font-size: 13px;
 					font-weight: 300;
 					letter-spacing: 1px;
+				}
+				.sub-menu{
+					right:0;
+					text-align:left!important;
+					&:after{
+						right:20px;
+					}
 				}
 			}
 		}
