--- a/wp-content/themes/evie/assets/less/layouts/pages/_ingredient.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_ingredient.less
@@ -11,6 +11,7 @@
 		.ingreditent-row{
 			margin-bottom:40px;
 			.ingredient-content{
+				font-size:12px;
 				h2{
 					text-align:center;
 					font-family: "PlayfairDisplay";
@@ -22,6 +23,7 @@
 					overflow: hidden;
 					span{
 						display:inline-block;
+						max-width:90%;
 					}
 				}
 				h2:before, h2:after {
