--- a/wp-content/themes/evie/assets/less/layouts/_footer.less
+++ b/wp-content/themes/evie/assets/less/layouts/_footer.less
@@ -28,7 +28,7 @@ footer{
 			}
 			li{
 				list-style:none;
-				margin-right:5.5%!important;
+				//margin-right:5.5%!important;
 				text-align: center;
 				white-space:nowrap;
 				a{
@@ -62,11 +62,11 @@ footer{
 	background:url(../img/sprites/sprites_social_media.png) no-repeat;
 	width:21px;
 	height:21px;
-	margin-right:10px;
+	margin-left:10px;
 	display:inline-block;
-	&:last-child{
+	/*&:last-child{
 		margin-right:0;
-	}
+	}*/
 	
 	&.icon_facebook{
 		background-position:0 0;
@@ -139,7 +139,7 @@ footer{
 				&:first-child > li{
 					float:left;
 					width:auto;
-					margin-right:40px;
+					margin-right:5.5%;
 					&:last-child{
 						margin-right:0!important;
 					}
