--- a/wp-content/themes/evie/assets/less/layouts/pages/_stocklist.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_stocklist.less
@@ -24,7 +24,6 @@
 			font-family: "PlayfairDisplay";
 		}
 		.stocklist-row{
-			background: transparent url(../img/divider.gif) 50% top repeat-y;
 			.stocklist-item{
 				padding:0 50px 20px 50px;
 				h4{
@@ -52,6 +51,9 @@
 	.stocklist-section .stocklist-container .stocklist-row:last-child .stocklist-item {
 	  padding-bottom: 0;
 	}
+	.stocklist-row{
+		background: transparent url(../img/divider.gif) 50% top repeat-y;
+	}
 }
 
 //===============================================================================
@@ -60,7 +62,7 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-md-min) {
-
+	
 }
 
 //===============================================================================
