--- a/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
@@ -78,7 +78,7 @@
 			background:#F1F1F1;
 			text-align:center;
 			padding:5px 5%;
-			margin-bottom:35px;
+			margin-bottom:15px;
 			p{
 				margin-bottom:0;
 				font-size: 14px;
@@ -120,7 +120,13 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-md-min) {
-	
+	.blog-section{
+		.blog-post-item{
+			.blog-post-detail{
+				margin-bottom:35px;
+			}
+		}
+	}
 }
 
 //===============================================================================
