--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -78,7 +78,8 @@
 	}
 }
 
-#menu-primary-navigation{
+//#menu-primary-navigation-1{
+.navbar-nav{
 	&>li a{
 		font-family: "Novecento";
 		font-weight: 300;
@@ -183,7 +184,7 @@
 				}
 				&:hover{
 					& > a{
-						font-weight:bold;
+						//font-weight:bold;
 					}
 					.sub-menu{
 						display:block;
@@ -291,6 +292,12 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-md-min) {
+	/*.mobile-menu{
+		&.navbar-collapse.collapse{
+			display:none!important;
+			
+		}
+	}*/
 	.searchBox-container{
 	    top: 140px;
 		right: 15px;
