--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -167,6 +167,7 @@ ul.products li.product{
 			font-size: 14px;
 			color:#000;
 			text-transform: none;
+			line-height:1.2;
 		}
 		img{
 			width:100%;
