--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7280,9 +7280,18 @@ body {
 #main-content .under-title-link-container .right-link ul li .sub-menu:after {
   right: 20px;
 }
+.addthis_default_style .addthis_separator,
+.addthis_default_style .at300b,
+.addthis_default_style .at4-icon,
+.addthis_default_style .at300bo,
+.addthis_default_style .at300m,
+.addthis_default_style .at300bs {
+  float: none!important;
+  display: inline-block;
+}
 @media (min-width: 768px) {
   .main {
-    padding-top: 181px;
+    padding-top: 150px;
   }
   .headline-title-container .headline-title-center {
     font-size: 22px;
@@ -7389,37 +7398,62 @@ footer .copyright a {
 }
 .social-link-container a {
   background: url(../img/sprites/sprites_social_media.png) no-repeat;
-  width: 21px;
-  height: 21px;
+  width: 21px!important;
+  height: 21px!important;
   margin-left: 10px;
   display: inline-block;
   /*&:last-child{
 		margin-right:0;
 	}*/
 }
-.social-link-container a.icon_facebook {
+.social-link-container a:first-child {
+  margin-left: 0;
+}
+.social-link-container a.icon_facebook,
+.social-link-container a.addthis_button_facebook {
   background-position: 0 0;
 }
 .social-link-container a.icon_instagram {
   background-position: -34px 0;
 }
-.social-link-container a.icon_weibo {
+.social-link-container a.icon_weibo,
+.social-link-container a.addthis_button_sinaweibo {
   background-position: -68px 0;
 }
 .social-link-container a.icon_wechat {
   background-position: -102px 0;
 }
-.social-link-container a.icon_pinterest {
+.social-link-container a.icon_pinterest,
+.social-link-container a.addthis_button_pinterest_share {
   background-position: -136px 0;
 }
-.social-link-container a.icon_twitter {
+.social-link-container a.icon_twitter,
+.social-link-container a.addthis_button_twitter {
   background-position: -170px 0;
 }
 .social-link-container a.icon_youtube {
   background-position: -204px 0;
 }
-.social-link-container a.icon_linkin {
-  background-position: -239px 0;
+.social-link-container a.icon_googleplus,
+.social-link-container a.addthis_button_google_plusone_badge {
+  background-position: -237px 0;
+}
+.social-link-container a.icon_linkin,
+.social-link-container a.addthis_button_linkedin {
+  background-position: -271px 0;
+}
+.social-link-container a.icon_email,
+.social-link-container a.addthis_button_email {
+  background-position: -305px 0;
+}
+.social-link-container a.icon_line {
+  background-position: -338px 0;
+}
+.social-link-container a.icon_whatsapp {
+  background-position: -371px 0;
+}
+.social-link-container a span {
+  visibility: hidden;
 }
 @media (min-width: 768px) {
   footer .footer-link-container .footer_link li {
@@ -7459,15 +7493,18 @@ footer .copyright a {
   box-shadow: 0px 7px 13px -3px rgba(125, 124, 125, 0.6);
 }
 .home-banner .owl-controls {
-  margin-top: 50px!important;
+  position: absolute;
+  width: 100%;
+  bottom: 10px;
 }
 .home-banner .owl-controls .owl-nav {
   display: none;
 }
 .home-banner .owl-controls .owl-dots .owl-dot span {
-  background-color: #ECD1DA;
+  background-color: #85878A;
   width: 8px;
   height: 8px;
+  margin: 5px 12px;
 }
 .home-banner .owl-controls .owl-dots .owl-dot.active span,
 .home-banner .owl-controls .owl-dots .owl-dot:hover span {
@@ -7566,7 +7603,7 @@ footer .copyright a {
 }
 @media (min-width: 768px) {
   .home .main {
-    padding-top: 181px;
+    padding-top: 151px;
   }
   .home-banner.container {
     width: 100%;
@@ -7652,6 +7689,7 @@ footer .copyright a {
   font-family: "PlayfairDisplay";
   font-weight: 400;
   font-size: 13.3px;
+  margin-bottom: 25px;
 }
 .single-product .product .product-content {
   margin-bottom: 15px;
@@ -8297,7 +8335,7 @@ ul.products li.product .find-out-more {
 .language-menu {
   display: none;
   font-size: 12px;
-  margin-top: 30px;
+  margin-top: 22px;
   padding-right: 15px;
   position: absolute;
   top: 0;
@@ -8354,7 +8392,7 @@ ul.products li.product .find-out-more {
 }
 .navbar-nav .sub-menu > li a {
   font-family: "Novecento";
-  font-weight: 300;
+  font-weight: 500;
   letter-spacing: 1px;
   font-size: 11px;
 }
@@ -8364,14 +8402,13 @@ ul.products li.product .find-out-more {
   text-decoration: none;
 }
 .navbar-nav .sub-menu .sub-menu li a {
-  font-family: "PlayfairDisplay";
-  font-weight: 400;
+  font-weight: 300;
   letter-spacing: 1px;
-  font-size: 8.5px;
+  font-size: 11.5px;
   text-transform: none;
 }
 .navbar-nav .sub-menu .sub-menu li a:hover {
-  font-weight: 700;
+  font-weight: 500;
   color: #000;
   text-decoration: none;
 }
@@ -8395,6 +8432,12 @@ ul.products li.product .find-out-more {
   text-transform: uppercase;
   color: #000;
 }
+.mobile-menu .navbar-nav li .caret {
+  display: none;
+}
+.mobile-menu .navbar-nav li a {
+  color: #000;
+}
 .mobile-menu .navbar-nav li.active > a {
   background: #EED7D3;
   color: #000;
@@ -8402,6 +8445,31 @@ ul.products li.product .find-out-more {
 .mobile-menu .navbar-nav li.active > a:focus,
 .mobile-menu .navbar-nav li.active > a:hover {
   background: #EED7D3;
+  color: #000;
+}
+.mobile-menu .navbar-nav li.open > a {
+  background: transparent;
+  color: #000;
+}
+.mobile-menu .navbar-nav li.open > a:focus,
+.mobile-menu .navbar-nav li.open > a:hover {
+  background: #EED7D3;
+  color: #000;
+}
+.mobile-menu .navbar-nav li.open .dropdown-menu li a {
+  color: #000;
+}
+.mobile-menu .navbar-nav li.open .dropdown-menu .open > a,
+.mobile-menu .navbar-nav li.open .dropdown-menu .active > a {
+  background: #EED7D3;
+  color: #000;
+}
+.mobile-menu .navbar-nav li.open .dropdown-menu .open > a:focus,
+.mobile-menu .navbar-nav li.open .dropdown-menu .active > a:focus,
+.mobile-menu .navbar-nav li.open .dropdown-menu .open > a:hover,
+.mobile-menu .navbar-nav li.open .dropdown-menu .active > a:hover {
+  background: #EED7D3;
+  color: #000;
 }
 .language-menu a {
   font-family: "Novecento";
@@ -8415,7 +8483,7 @@ ul.products li.product .find-out-more {
 }
 @media (min-width: 768px) {
   .navbar-default {
-    height: 181px;
+    height: 151px;
   }
   .navbar-default .navbar-nav > .active > a,
   .navbar-default .navbar-nav > .active > a:hover,
@@ -8434,7 +8502,7 @@ ul.products li.product .find-out-more {
   .navbar-brand {
     width: auto;
     height: auto;
-    padding-top: 35px;
+    padding-top: 22px;
   }
   .language-menu {
     display: block;
@@ -8446,7 +8514,7 @@ ul.products li.product .find-out-more {
     top: 60px;
   }
   .nav-container {
-    margin-top: 132px;
+    margin-top: 99px;
   }
   .nav-container .main-menu {
     position: relative;
@@ -8546,7 +8614,7 @@ ul.products li.product .find-out-more {
     float: none;
     width: 100%;
     font-size: 12px;
-    line-height: 120%;
+    line-height: 150%;
   }
 }
 @media (min-width: 992px) {
@@ -8557,7 +8625,7 @@ ul.products li.product .find-out-more {
 		}
 	}*/
   .searchBox-container {
-    top: 140px;
+    top: 113px;
     right: 15px;
   }
   .searchBox-container .search-field {
