--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -316,6 +316,11 @@ body{
 	}
 }
 
+.addthis_default_style .addthis_separator, .addthis_default_style .at300b, .addthis_default_style .at4-icon, .addthis_default_style .at300bo, .addthis_default_style .at300m, .addthis_default_style .at300bs{
+	float:none!important;
+	display:inline-block;
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
@@ -323,7 +328,7 @@ body{
 //===============================================================================
 @media (min-width: @screen-sm-min) {
 	.main{
-		padding-top:181px;
+		padding-top:150px;
 	}
 
 	.headline-title-container .headline-title-center{
