--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -18,16 +18,20 @@
 	}
 	
 	.owl-controls{
-		margin-top:50px!important;
+		//margin-top:50px!important;
+		position:absolute;
+		width:100%;
+		bottom:10px;
 		.owl-nav{
 			display:none;
 		}
 		.owl-dots{
 			.owl-dot{
 				span{
-					background-color:#ECD1DA;
+					background-color:#85878A;
 					width:8px;
 					height:8px;
+					margin:5px 12px;
 				}
 				&.active span, &:hover span{
 					background-color:#EA8B9C;
@@ -138,7 +142,7 @@
 @media (min-width: @screen-sm-min) {
 	.home{
 		.main{
-			padding-top: 181px;
+			padding-top: 151px;
 		}
 	}
 	.home-banner{
