--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -36,6 +36,7 @@
 			font-family: "PlayfairDisplay";
 			font-weight: 400;
 			font-size: 13.3px;
+			margin-bottom:25px;
 		}
 		.product-content{
 			margin-bottom:15px;
