--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -48,10 +48,10 @@
 	#main-banner-container{
 		.custom-banner-prev{
 			position:absolute;
-			left:0;
-			top:35%;
-			width:90px;
-			height:90px;
+			left:4%;
+			top:53%;
+			width:53px;
+			height:53px;
 			background:url(../img/sprites/slider_arrow_left.png) no-repeat;
 			z-index:999;
 			cursor:pointer;
@@ -59,10 +59,10 @@
 		}
 		.custom-banner-next{
 			position:absolute;
-			right:0;
-			top:35%;
-			width:90px;
-			height:90px;
+			right:4%;
+			top:53%;
+			width:53px;
+			height:53px;
 			background:url(../img/sprites/slider_arrow_right.png) no-repeat;
 			z-index:999;
 			cursor:pointer;
@@ -189,10 +189,10 @@
 	.home-banner{
 		#main-banner-container{
 			.custom-banner-prev{
-				top:35%;
+				top:53%;
 			}
 			.custom-banner-next{
-				top:35%;
+				top:53%;
 			}
 			&:hover{
 				.custom-banner-prev{
