--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -6912,16 +6912,6 @@ button.close {
 }
 @font-face {
   font-family: 'Novecento';
-  src: url('../fonts/2E3E6E_2_0.eot');
-  src: url('../fonts/2E3E6E_2_0.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/2E3E6E_2_0.woff2') format('woff2'), /* Super Modern Browsers */ url('../fonts/2E3E6E_2_0.woff') format('woff'), /* Pretty Modern Browsers */ url('../fonts/2E3E6E_2_0.ttf') format('truetype');
-  font-weight: 600;
-  font-style: normal;
-  
-  /* IE9 Compat Modes */
-  /* Safari, Android, iOS */
-}
-@font-face {
-  font-family: 'Novecento';
   src: url('../fonts/2E3E6E_3_0.eot');
   src: url('../fonts/2E3E6E_3_0.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/2E3E6E_3_0.woff2') format('woff2'), /* Super Modern Browsers */ url('../fonts/2E3E6E_3_0.woff') format('woff'), /* Pretty Modern Browsers */ url('../fonts/2E3E6E_3_0.ttf') format('truetype');
   font-weight: 200;
@@ -7016,7 +7006,7 @@ body {
   box-shadow: 0px 3px 5px 0px rgba(245, 232, 229, 0.5);
 }
 #main-content .breadcrumb-container .woocommerce-breadcrumb {
-  font-weight: 300;
+  font-weight: 400;
   font-family: "Novecento";
   color: #000;
   text-transform: uppercase;
@@ -7400,7 +7390,7 @@ footer .copyright a {
   background: url(../img/sprites/sprites_social_media.png) no-repeat;
   width: 21px!important;
   height: 21px!important;
-  margin-left: 10px;
+  margin-left: 3px;
   display: inline-block;
   /*&:last-child{
 		margin-right:0;
@@ -7548,7 +7538,7 @@ footer .copyright a {
   display: none;
 }
 .promotion-banner {
-  margin-top: 27px;
+  margin-top: 52px;
 }
 .promotion-banner .img-responsive {
   max-width: none;
@@ -7819,7 +7809,8 @@ ul.products li.product .find-out-more {
   font-size: 14px;
   color: #000;
   text-transform: none;
-  line-height: 1.2;
+  line-height: 1.3;
+  display: block;
 }
 .product-item-brief-wrapper .product-item-brief-content img {
   width: 100%;
@@ -7827,6 +7818,16 @@ ul.products li.product .find-out-more {
 }
 .product-item-brief-wrapper .product-item-brief-content .product-short-content {
   font-size: 12px;
+}
+.woocommerce ul.products li.product h3 {
+  text-align: center;
+  font-family: "PlayfairDisplay";
+  font-weight: 400;
+  font-size: 14px;
+  color: #000;
+  text-transform: none;
+  line-height: 1.3;
+  display: block;
 }
 @media (min-width: 768px) {
   .single-product .product .product-other-detail-container .product-other-detail-item {
@@ -8397,18 +8398,19 @@ ul.products li.product .find-out-more {
   font-size: 11px;
 }
 .navbar-nav .sub-menu > li a:hover {
-  font-weight: 500;
+  font-weight: 600;
   color: #000;
   text-decoration: none;
 }
 .navbar-nav .sub-menu .sub-menu li a {
-  font-weight: 300;
+  font-family: "Aileron";
+  font-weight: 200;
   letter-spacing: 1px;
   font-size: 11.5px;
   text-transform: none;
 }
 .navbar-nav .sub-menu .sub-menu li a:hover {
-  font-weight: 500;
+  font-weight: 600;
   color: #000;
   text-decoration: none;
 }
