--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -168,7 +168,8 @@ ul.products li.product{
 			font-size: 14px;
 			color:#000;
 			text-transform: none;
-			line-height:1.2;
+			line-height:1.3;
+			display: block;
 		}
 		img{
 			width:100%;
@@ -178,6 +179,17 @@ ul.products li.product{
 			font-size:12px;
 		}
 	}
+}
+
+.woocommerce ul.products li.product h3{
+	text-align:center;
+			font-family: "PlayfairDisplay";
+			font-weight: 400;
+			font-size: 14px;
+			color:#000;
+			text-transform: none;
+			line-height:1.3;
+			display: block;
 }
 
 //===============================================================================
