--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -97,19 +97,19 @@
 			letter-spacing: 1px;
 			font-size: 11px;
 			&:hover{
-				font-weight: 500;
+				font-weight: 600;
 				color: #000;
 				text-decoration: none;
 			}
 		}
 		.sub-menu li a{
-			//font-family: "PlayfairDisplay";
-			font-weight: 300;
+			font-family: "Aileron";
+			font-weight: 200;
 			letter-spacing: 1px;
 			font-size: 11.5px;
 			text-transform: none;
 			&:hover{
-				font-weight: 500;
+				font-weight: 600;
 				color: #000;
 				text-decoration: none;
 			}
